// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LatestExperimentsList matches snapshot: latest bulk experiments 1`] = `
<ul
  style={
    Object {
      "listStyle": "none",
      "marginLeft": "offset",
    }
  }
>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Differential
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          49
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-GEOD-40611"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          06-03-2019
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-GEOD-40611"
        >
          Transcription profiling by array of parotid tissue from Primary Sjögren’s Syndrome and controls
           – 
          <i>
            Homo sapiens
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Baseline
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          11
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-451"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          06-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-451"
        >
          RNA-Seq of Schistosoma mansoni (flatworms) larva and adult individuals at different life-stages
           – 
          <i>
            Schistosoma mansoni
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Baseline
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          200
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-2836"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          05-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-2836"
        >
          RNA-seq of coding RNA from tissue samples of 122 human individuals representing 32 different tissues
           – 
          <i>
            Homo sapiens
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Baseline
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          11
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4401"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          05-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4401"
        >
          Transcription profiling by high throughput sequencing of different tissues from Brachypodium distachyon (Bd21 inbred line)
           – 
          <i>
            Brachypodium distachyon
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Differential
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          30
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-1913"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          04-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-1913"
        >
          Salt stress in salt sensitive Oryza sativa Indica group IR29 
           – 
          <i>
            Oryza sativa Indica group
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Differential
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          89
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MAXD-6"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          04-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MAXD-6"
        >
          Transcription profiling by array of Drosophila larvae after parasitoid attack
           – 
          <i>
            Drosophila melanogaster
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Differential
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          12
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MEXP-1810"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          25-09-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MEXP-1810"
        >
          Transcription profiling by array of C. elegans isolates treated with dauer larva-inducing pheromone
           – 
          <i>
            Caenorhabditis elegans
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT"
      >
        <span
          className="sc-gsnTZi dsXvwY button"
        >
          Differential
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          12
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-GEOD-43049"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          25-09-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-GEOD-43049"
        >
          Caco-2 cells: cultured in conventional vs apical anaerobic conditions
           – 
          <i>
            Homo sapiens
          </i>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`LatestExperimentsList matches snapshot: latest single cell experiments 1`] = `
<ul
  style={
    Object {
      "listStyle": "none",
      "marginLeft": "offset",
    }
  }
>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          6,638
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-EHCA-2"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          16-11-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-EHCA-2"
        >
          Melanoma infiltration of stromal and immune cells
           – 
          <i>
            Mus musculus
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          3,514
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5061"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          11-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5061"
        >
          Single-cell RNA-seq analysis of human pancreas from healthy individuals and type 2 diabetes patients
           – 
          <i>
            Homo sapiens
          </i>
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      style={
        Object {
          "display": "block",
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <span
          className="sc-gsnTZi iupGoc button"
          style={
            Object {
              "minWidth": "120px",
            }
          }
          title="Number of assays in experiment"
        >
          250
           assays
        </span>
      </div>
      <div
        className="sc-bczRLJ iuLMzT hide-for-small-only"
      >
        <a
          className="button"
          href="https://www.ebi.ac.uk/gxa/experiments/E-GEOD-99058"
          style={
            Object {
              "backgroundColor": "#3497C5",
              "marginBottom": "0px",
            }
          }
        >
          Results
        </a>
      </div>
      <div
        className="sc-bczRLJ iuLMzT"
        style={
          Object {
            "paddingLeft": "1rem",
          }
        }
      >
        <small>
          11-10-2018
        </small>
        <br />
        <a
          href="https://www.ebi.ac.uk/gxa/experiments/E-GEOD-99058"
        >
          Single cell RNA-seq of mouse brain astrocyte transcriptomes
           – 
          <i>
            Mus musculus
          </i>
        </a>
      </div>
    </div>
  </li>
</ul>
`;
